# aoc22

./: Cargo.toml
.github/workflows/: rust.yml
