[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "bin/day1/main.rs"

[[bin]]
name = "day2"
path = "bin/day2/main.rs"

# [[bin]]
# name = "day3"
# path = "bin/day3/main.rs"

[[bin]]
name = "day4"
path = "bin/day4/main.rs"

[[bin]]
name = "day5"
path = "bin/day5/main.rs"

[[bin]]
name = "day6"
path = "bin/day6/main.rs"

[[bin]]
name = "day7"
path = "bin/day7/main.rs"

[[bin]]
name = "day8"
path = "bin/day8/main.rs"
